crud for all enpoints
